首页完成： 轮播， 校内动态，视频播放

--- a/src/assets/style/common.less
+++ b/src/assets/style/common.less
@@ -7,13 +7,22 @@
 // 字体大小
 @font14:14px;
 @font30:30px;
-@font14:14px;
+@font24:24px;
 @font14:14px;
 
 // 字体颜色
 @fontColor1:white;
 
 // 公共类
+.zzc {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 1000;
+}
 .commonbox {
   width: 95%;
   max-width: 1266px;
@@ -46,4 +55,11 @@
     margin-left: -6px;
     bottom: 5px;
   }
+}
+*{
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
+  list-style: none;
+  font-family: 黑体;
 }
